src/snapshots/nml__lexer__lexer_tests__if_else_expr.snap
---
source: src/lexer.rs
expression: tokens.snapshot()
---
   1:0  -    1:2  If
   1:3  -    1:4  Identifier: a
   1:5  -    1:7  GtEq
   1:8  -    1:9  Identifier: b
   1:10 -    1:11 OpenCurl
   1:12 -    1:13 Identifier: a
   1:14 -    1:15 Plus
   1:16 -    1:17 Identifier: b
   1:18 -    1:19 CloseCurl
   1:20 -    1:24 Else
   1:25 -    1:26 OpenCurl
   1:27 -    1:28 Identifier: a
   1:29 -    1:30 Minus
   1:31 -    1:32 Identifier: b
   1:33 -    1:34 CloseCurl
   1:34 -    1:0  EOF
