src/snapshots/nml__lexer__lexer_tests__normal.snap
---
source: src/lexer.rs
expression: "format!(\"Input: {}\\n\\n{}\", input, tokens)"
---
Input: let ident = 2

   1:0  -    1:3  Let
   1:3  -    1:4  Trivia Space
   1:4  -    1:9  Identifier: ident
   1:9  -    1:10 Trivia Space
   1:10 -    1:11 Assign
   1:11 -    1:12 Trivia Space
   1:12 -    1:13 Number: 2
   1:13 -    1:0  EOF
