src/snapshots/nml__lexer__lexer_tests__range_inclusive_operator.snap
---
source: src/lexer.rs
expression: "token_vector(\"0..=10\", true).snapshot()"
---
   1:0  -    1:1  Number: 0
   1:1  -    1:4  InclusiveRange
   1:4  -    1:6  Number: 10
   1:6  -    1:0  EOF
