src/snapshots/nml__lexer__lexer_tests__range_operator.snap
---
source: src/lexer.rs
expression: "token_vector(\"0..10\", true).snapshot()"
---
   1:0  -    1:1  Number: 0
   1:1  -    1:3  ExclusiveRange
   1:3  -    1:5  Number: 10
   1:5  -    1:0  EOF
