src/snapshots/nml__lexer__lexer_tests__tokenize_let_binding_const_newline.snap
---
source: src/lexer.rs
expression: "token_vector(\"let a = 2\\n\", false).snapshot()"
---
   1:0  -    1:3  Let
   1:3  -    1:4  Trivia Space
   1:4  -    1:5  Identifier: a
   1:5  -    1:6  Trivia Space
   1:6  -    1:7  Assign
   1:7  -    1:8  Trivia Space
   1:8  -    1:9  Number: 2
   1:9  -    2:0  EOL
   2:0  -    1:0  EOF
