src/snapshots/nml__lexer__lexer_tests__tokenize_let_binding_expr.snap
---
source: src/lexer.rs
expression: tokens.snapshot()
---
   1:0  -    1:3  Let
   1:4  -    1:5  Identifier: a
   1:6  -    1:7  Assign
   1:8  -    1:9  Number: 1
   1:10 -    1:11 Plus
   1:12 -    1:13 Number: 2
   1:13 -    0:11 EOF
