src/snapshots/nml__lexer__lexer_tests__tokenize_let_binding_func.snap
---
source: src/lexer.rs
expression: tokens.snapshot()
---
   1:0  -    1:3  Let
   1:4  -    1:9  Identifier: my_fn
   1:10 -    1:11 Assign
   1:12 -    1:13 OpenCurl
   1:14 -    1:15 Identifier: a
   1:15 -    1:16 Separator
   1:17 -    1:18 Identifier: b
   1:19 -    1:21 FatArrow
   1:22 -    1:23 Identifier: a
   1:24 -    1:25 Plus
   1:26 -    1:27 Identifier: b
   1:28 -    1:29 CloseCurl
   1:29 -    1:0  EOF
