src/snapshots/nml__lexer__lexer_tests__tokenize_type_decl_record.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Type,
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 0,
            },
            end: SourceIndex {
                row: 1,
                col: 4,
            },
        },
    },
    Token {
        kind: Identifier(
            "MyType",
        ),
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 5,
            },
            end: SourceIndex {
                row: 1,
                col: 11,
            },
        },
    },
    Token {
        kind: Assign,
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 12,
            },
            end: SourceIndex {
                row: 1,
                col: 13,
            },
        },
    },
    Token {
        kind: OpenCurl,
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 14,
            },
            end: SourceIndex {
                row: 1,
                col: 15,
            },
        },
    },
    Token {
        kind: Identifier(
            "a",
        ),
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 16,
            },
            end: SourceIndex {
                row: 1,
                col: 17,
            },
        },
    },
    Token {
        kind: Identifier(
            "Int",
        ),
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 18,
            },
            end: SourceIndex {
                row: 1,
                col: 21,
            },
        },
    },
    Token {
        kind: Separator,
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 21,
            },
            end: SourceIndex {
                row: 1,
                col: 22,
            },
        },
    },
    Token {
        kind: Identifier(
            "b",
        ),
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 23,
            },
            end: SourceIndex {
                row: 1,
                col: 24,
            },
        },
    },
    Token {
        kind: Error(
            Unexpected(
                '[',
            ),
        ),
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 25,
            },
            end: SourceIndex {
                row: 1,
                col: 26,
            },
        },
    },
    Token {
        kind: Identifier(
            "Gt",
        ),
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 26,
            },
            end: SourceIndex {
                row: 1,
                col: 28,
            },
        },
    },
    Token {
        kind: Separator,
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 28,
            },
            end: SourceIndex {
                row: 1,
                col: 29,
            },
        },
    },
    Token {
        kind: Identifier(
            "Lt",
        ),
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 30,
            },
            end: SourceIndex {
                row: 1,
                col: 32,
            },
        },
    },
    Token {
        kind: Error(
            Unexpected(
                ']',
            ),
        ),
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 32,
            },
            end: SourceIndex {
                row: 1,
                col: 33,
            },
        },
    },
    Token {
        kind: CloseCurl,
        span: Span {
            start: SourceIndex {
                row: 1,
                col: 34,
            },
            end: SourceIndex {
                row: 1,
                col: 35,
            },
        },
    },
]
